[gd_scene load_steps=22 format=2]

[ext_resource path="res://buttons/SOLO SURVIVAL.png" type="Texture" id=1]
[ext_resource path="res://buttons/PRESSED SOLO SURVIVAL.png" type="Texture" id=2]
[ext_resource path="res://buttons/PRESSED ADVENTURE.png" type="Texture" id=3]
[ext_resource path="res://buttons/ADVENTURE.png" type="Texture" id=4]
[ext_resource path="res://buttons/MULTIPLAYER.png" type="Texture" id=5]
[ext_resource path="res://buttons/PRESSED MULTIPLAYER.png" type="Texture" id=6]
[ext_resource path="res://buttons/PRESSED OPTIONS.png" type="Texture" id=7]
[ext_resource path="res://buttons/OPTIONS.png" type="Texture" id=8]
[ext_resource path="res://MENU.gd" type="Script" id=9]
[ext_resource path="res://Game icon.jpg" type="Texture" id=10]
[ext_resource path="res://tilemaps/background.jpg" type="Texture" id=11]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=12]
[ext_resource path="res://AUDIO/fluidity-100-ig-edit-4558.mp3" type="AudioStream" id=13]
[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://gme buttons/LOGO.png" type="Texture" id=15]
[ext_resource path="res://art/notpress0000.png" type="Texture" id=16]
[ext_resource path="res://art/notpress0001.png" type="Texture" id=17]
[ext_resource path="res://art/rate us0001.png" type="Texture" id=18]
[ext_resource path="res://art/rate us0000.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 14 )

[node name="title-screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 1087.36, 519.772 )
scale = Vector2( 1.9391, 1.9391 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Meny" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 430.407
margin_top = 40.0
margin_right = 430.406
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="Meny"]
margin_right = 1919.0

[node name="HBoxContainer" type="HBoxContainer" parent="Meny"]
margin_top = 4.0
margin_right = 1919.0
margin_bottom = 4.0

[node name="center row" type="HBoxContainer" parent="Meny/HBoxContainer"]
size_flags_vertical = 3
alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="Meny/HBoxContainer/center row"]
position = Vector2( -243.163, 53.6744 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 1 )
pressed = ExtResource( 2 )
passby_press = true

[node name="TouchScreenButton2" type="TouchScreenButton" parent="Meny/HBoxContainer/center row"]
position = Vector2( -243.163, 272.929 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="Meny/HBoxContainer/center row"]
position = Vector2( -243.163, 479.358 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="TouchScreenButton4" type="TouchScreenButton" parent="Meny/HBoxContainer/center row"]
position = Vector2( -243.163, 694.837 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 8 )
pressed = ExtResource( 7 )

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true

[node name="LOGO" type="Sprite" parent="."]
position = Vector2( 1639.98, 173.978 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 15 )

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 1, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup"]
margin_left = 40.0
margin_top = -167.273
margin_right = 1001.0
margin_bottom = 1077.73
custom_fonts/font = SubResource( 1 )
text = "


This game is 
made by the extreme
hardwork of  Ashtrix 
team. Consitting of 
secret members who work 
for the betterment of the
nation the game is 100% 
made in India.
If you want to tell us about 
something or have any 
suggestion you could 
contact us ..on gmail
or instagram...
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Popup"]
visible = false
modulate = Color( 1, 0, 0, 1 )
margin_left = 945.184
margin_top = 97.6744
margin_right = 1928.18
margin_bottom = 1420.67
custom_fonts/font = SubResource( 1 )
text = "->instagram::
@astrix_game_dev
->gmail::
ashtrixgamedev@gmail.com"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Popup"]
modulate = Color( 1, 1, 1, 0.329412 )
position = Vector2( 1406.88, 523.358 )
scale = Vector2( 1.40333, 1.40333 )
texture = ExtResource( 10 )

[node name="Label3" type="Button" parent="Popup"]
margin_left = 1525.3
margin_top = 920.337
margin_right = 1869.3
margin_bottom = 1037.34
custom_fonts/font = SubResource( 2 )
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Button" parent="."]
margin_left = 1525.3
margin_top = 920.337
margin_right = 1869.3
margin_bottom = 1037.34
custom_fonts/font = SubResource( 2 )
text = "credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="not press" type="TouchScreenButton" parent="."]
position = Vector2( 1525.3, 396.404 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 16 )
pressed = ExtResource( 17 )

[node name="rate us" type="TouchScreenButton" parent="."]
position = Vector2( 1525.3, 580.253 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 19 )
pressed = ExtResource( 18 )

[connection signal="released" from="Meny/HBoxContainer/center row/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="released" from="Meny/HBoxContainer/center row/TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
[connection signal="released" from="Meny/HBoxContainer/center row/TouchScreenButton3" to="." method="_on_TouchScreenButton3_released"]
[connection signal="released" from="Meny/HBoxContainer/center row/TouchScreenButton4" to="." method="_on_TouchScreenButton4_released"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="pressed" from="Popup/Label3" to="." method="_on_Label3_pressed"]
[connection signal="pressed" from="Label2" to="." method="_on_Label2_pressed"]
[connection signal="toggled" from="Label2" to="." method="_on_Label2_toggled"]
[connection signal="released" from="not press" to="." method="_on_not_press_released"]
[connection signal="released" from="rate us" to="." method="_on_rate_us_released"]
